링스 코딩작업

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 </div>
             </div>
         </header>
-        <main>
+        <main><!-- 메인 -->
             <div class="main"><!-- 메인배너 스와이퍼 -->
                 <div class="swiper" id="main_bnr">
                     <!--필수-->
@@ -117,10 +117,13 @@
                     <h1>A new fragrance</h1>
                     <p>변화를 담은 향이 일상을 특별하게 만듭니다<br>새롭게 출시된 제품들을 둘러보세요</p>
                     <div class="more_btn">
-                        <button type="button" id="more_button">더보기</button>
-                        <svg width="8" height="13" viewBox="0 0 8 13" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M1.10938 12.5L0 11.3906L5.14062 6.25L0 1.10938L1.10938 0L7.35938 6.25L1.10938 12.5Z" fill="white"/>
-                        </svg>
+                        <button type="button" id="more_button">
+                            더보기
+                            <svg width="8" height="13" viewBox="0 0 8 13" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M1.10938 12.5L0 11.3906L5.14062 6.25L0 1.10938L1.10938 0L7.35938 6.25L1.10938 12.5Z" fill="white"/>
+                            </svg>
+                        </button>
+                        
                     </div>
                 </div>
                 <div class="bnr_right_img">
@@ -513,10 +516,37 @@
                         </div>
                     </div>
                 </div>
-                <div class="finder_bg"></div>
+                <div class="finder_bg">
+                    <div class="finder_left">
+                        <h1>The Fragrance Finder</h1>
+                        <p>나에게 어울리는 향수를 찾는 것은 쉽지 않습니다.<br>
+                        프래그런스 파인더가 이상적인 향수를 찾을 수 있도록 도와드립니다.</p>
+                        <p>이솝 프래그런스는 사계절과 다양한 취향, 기분에 조화롭게 어울립니다.<br>
+                        나에게 어울리는 향수를 찾아보세요.</p>
+                        <button type="button" id="finder_btn">
+                            더보기
+                            <svg width="8" height="13" viewBox="0 0 8 13" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M1.10938 12.5L0 11.3906L5.14062 6.25L0 1.10938L1.10938 0L7.35938 6.25L1.10938 12.5Z" fill="#3F3939"/>
+                            </svg>
+                        </button>
+                    </div>
+                    <div class="finder_right">
+                        <img src="./images/Rectangle21.png">
+                    </div>
+                </div>
             </div>
         </main>
-        <footer></footer>
+        <footer><!-- 푸터 -->
+            <div class="f_top">
+                <div class="f_txt_order"></div>
+                <div class="f_txt_">
+                    <div class=""></div>
+                </div>
+                <div class="f_txt_"></div>
+                <div class="f_txt_"></div>
+            </div>
+            <div class="f_bottom"></div>
+        </footer>
     </div>
 
     <script>
