--- a/index.html
+++ b/index.html
@@ -537,15 +537,88 @@
             </div>
         </main>
         <footer><!-- 푸터 -->
-            <div class="f_top">
-                <div class="f_txt_order"></div>
-                <div class="f_txt_">
-                    <div class=""></div>
+            <div class="f_contents">
+                <div class="f_top">
+                    <div class="f_txt order">
+                        <h3>주문 및 지원</h3>
+                        <ul>
+                            <li><a href="#">문의하기</a></li>
+                            <li><a href="#">자주 묻는 질문</a></li>
+                            <li><a href="#">배송</a></li>
+                            <li><a href="#">반품</a></li>
+                            <li><a href="#">주문 내역</a></li>
+                            <li><a href="#">배송 조회하기</a></li>
+                            <li><a href="#">이용 약관</a></li>
+                        </ul>
+                    </div>
+                    <div class="f_txt service">
+                        <div class="f_txt_service_contents">
+                            <h3>서비스</h3>
+                            <ul>
+                                <li><a href="#">기업체 구매</a></li>
+                                <li><a href="#">1:1 채팅 상담</a></li> 
+                                <li><a href="#">배송</a></li>
+                                <li><a href="#">린스 앤 리턴 캠페인</a></li>
+                            </ul>
+                        </div>
+                        <div class="f_txt position_contents">
+                            <h3>위치 설정</h3>
+                            <ul>
+                                <li><a href="#">배송 : 대한민국</a></li>
+                                <li><a href="#">언어 : 한국어</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="f_txt introduce">
+                        <h3>소개</h3>
+                            <ul>
+                                <li><a href="#">브랜드 스토리</a></li>
+                                <li><a href="#">이솝 재단</a></li>
+                                <li><a href="#">채용</a></li>
+                                <li><a href="#">개인정보처리방침</a></li>
+                                <li><a href="#">영상정보처리기기 운영/관리 방침</a></li>
+                                <li><a href="#">정품 인증</a></li>
+                                <li><a href="#">쿠키 정책</a></li>
+                                <li><a href="#">개인정보수집∙이용 동의 요청 안내</a></li>
+                            </ul>
+                    </div>
+                    <div class="f_txt social">
+                        <h3>소셜</h3>
+                            <ul>
+                                <li><a href="#">Instagram</a></li>
+                                <li><a href="#">Twitter</a></li> 
+                                <li><a href="#">LinkedIn</a></li>
+                                <li><a href="#">Kakao Plus Friend</a></li>
+                            </ul>
+                    </div>
                 </div>
-                <div class="f_txt_"></div>
-                <div class="f_txt_"></div>
+                <div class="f_bottom">
+                    <div class="f_bottom_left">
+                        <h4>이솝 커뮤니케이션 구독하기</h4>
+                        <p class="sub">제품, 서비스, 스토어, 이벤트, 문화적 관심사 등 다양한 소식을 받아보실 수 있도록 이솝 이메일을 구독하세요</p>
+                        <input type="text" name="sub_txt" id="sub_txt" placeholder="이메일 주소">
+                        <div class="box">
+                            <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M2 18C1.45 18 0.979167 17.8042 0.5875 17.4125C0.195833 17.0208 0 16.55 0 16V2C0 1.45 0.195833 0.979167 0.5875 0.5875C0.979167 0.195833 1.45 0 2 0H16C16.55 0 17.0208 0.195833 17.4125 0.5875C17.8042 0.979167 18 1.45 18 2V16C18 16.55 17.8042 17.0208 17.4125 17.4125C17.0208 17.8042 16.55 18 16 18H2ZM2 16H16V2H2V16Z" fill="white"/>
+                            </svg>
+                            <p class="box_txt">
+                                이솝과 다른 로레알 브랜드는 고객님의 개인정보를 사용하여 특별한 혜택, 소식 및 다양한 정보를 보내드립니다.<br>
+                                개인정보는 당사의 개인정보 처리방침에 따라 안전하게 관리되며, 언제든지 수신을 해지하실 수 있습니다.<br>
+                                이솝은 로레알 그룹의 일원입니다.</p>
+                        </div>
+                    </div>
+                    <div class="f_txt f_bottom_right">
+                        <h3>기업 정보</h3>
+                            <ul>
+                                <li>상호: 이솝코리아 유한회사 | 주소: 서울특별시 강남구 도산대로45길 10-6 이솝코리아
+                                    대표자: ANTOINE PIERRE BOURGEOIS(앙트안삐에르부르주아)
+                                    대표전화: 1800-1987 | 대표 이메일:aesop@aesop.com
+                                    호스팅 사업자: SAP Hybris | 사업자 등록 번호: 220-88-56014사업자정보확인
+                                    통신판매업 신고번호: 2014-서울강남-02300</li>
+                            </ul>
+                    </div>
+                </div>
             </div>
-            <div class="f_bottom"></div>
         </footer>
     </div>
 
