바늘이야기 css 작업중

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <!--플러그인 필수 css cdn 연결-->
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.css">
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
+
+    <link href="https://fonts.googleapis.com/css2?family=Sorts+Mill+Goudy&display=swap" rel="stylesheet">
     <!--플러그인 필수 JS cdn 연결-->
     <script src="https://unpkg.com/swiper/swiper-bundle.js"></script>
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
@@ -598,9 +600,11 @@
                         <p class="sub">제품, 서비스, 스토어, 이벤트, 문화적 관심사 등 다양한 소식을 받아보실 수 있도록 이솝 이메일을 구독하세요</p>
                         <input type="text" name="sub_txt" id="sub_txt" placeholder="이메일 주소">
                         <div class="box">
-                            <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <a href="#">
+                                <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path d="M2 18C1.45 18 0.979167 17.8042 0.5875 17.4125C0.195833 17.0208 0 16.55 0 16V2C0 1.45 0.195833 0.979167 0.5875 0.5875C0.979167 0.195833 1.45 0 2 0H16C16.55 0 17.0208 0.195833 17.4125 0.5875C17.8042 0.979167 18 1.45 18 2V16C18 16.55 17.8042 17.0208 17.4125 17.4125C17.0208 17.8042 16.55 18 16 18H2ZM2 16H16V2H2V16Z" fill="white"/>
-                            </svg>
+                                </svg>
+                            </a>
                             <p class="box_txt">
                                 이솝과 다른 로레알 브랜드는 고객님의 개인정보를 사용하여 특별한 혜택, 소식 및 다양한 정보를 보내드립니다.<br>
                                 개인정보는 당사의 개인정보 처리방침에 따라 안전하게 관리되며, 언제든지 수신을 해지하실 수 있습니다.<br>
@@ -608,7 +612,7 @@
                         </div>
                     </div>
                     <div class="f_txt f_bottom_right">
-                        <h3>기업 정보</h3>
+                        <h3 class="company">기업 정보</h3>
                             <ul>
                                 <li>상호: 이솝코리아 유한회사 | 주소: 서울특별시 강남구 도산대로45길 10-6 이솝코리아
                                     대표자: ANTOINE PIERRE BOURGEOIS(앙트안삐에르부르주아)
