--- a/index.html
+++ b/index.html
@@ -21,7 +21,18 @@
             <a href="#"><img src="./images/logo.png" alt=""></a>
             <nav id="gnb">
                 <ul>
-                    <li><a href="#">신제품</a></li>
+                    <li>
+                        <a href="#">신제품</a>
+                        <div class="sub_menu">
+                            <ul class="sub_menu_txt">
+                                <li><a href="#">신제품</a></li>
+                                <li><a href="#">루센트 페이셜 리파이너</a></li>
+                                <li><a href="#">엘레오스 너리싱 바디 클렌저</a></li>
+                                <li><a href="#">오르너 오 드 퍼퓸</a></li>
+                                <li><a href="#">프래그런스 앤솔러지 볼륨</a></li>
+                            </ul>
+                        </div>
+                    </li>
                     <li><a href="#">베스트</a></li>
                     <li><a href="#">스킨케어</a></li>
                     <li><a href="#">핸드&바디</a></li>
