이솝 css 마무리

--- a/index.html
+++ b/index.html
@@ -43,18 +43,192 @@
                                 <a href="#">신제품 둘러보기</a>
                             </div>
                             <div class="sub_menu_img">
-                                <a href="#"><img src="./images/sub/Rectangle37.png"></a>
+                                <a href="#"><img src="./images/sub/sub_2.png"></a>
                                 <a href="#">추천제품 둘러보기</a>
                             </div>
                         </div>
                     </li>
-                    <li><a href="#">베스트</a></li>
-                    <li><a href="#">스킨케어</a></li>
-                    <li><a href="#">핸드&바디</a></li>
-                    <li><a href="#">홈</a></li>
-                    <li><a href="#">헤어</a></li>
-                    <li><a href="#">향수</a></li>
-                    <li><a href="#">키트&트래블</a></li>
+                    <li>
+                        <a href="#">베스트</a>
+                        <div class="sub_menu">
+                            <ul class="sub_menu_txt">
+                                <li><a href="#">베스트</a></li>
+                                <li><a href="#">제라늄 리프 바디 클렌저</a></li>
+                                <li><a href="#">올루스 아로마틱 룸 스프레이</a></li>
+                                <li><a href="#">테싯 오 드 퍼퓸</a></li>
+                                <li><a href="#">파슬리 씨드 안티 옥시던트 인텐스 세럼</a></li>
+                                <li><a href="#">제라늄 리프 바디 클렌저</a></li>
+                            </ul>
+                            <ul class="sub_menu_txt">
+                                <li><a href="#">추천제품</a></li>
+                                <li><a href="#">레저렉션 아로마틱 핸드 밤</a></li>
+                                <li><a href="#">레저렉션 아로마틱 핸드 워시</a></li>
+                                <li><a href="#">제라늄 리프 바디 클렌저</a></li>
+                                <li><a href="#">레버런스 아로마틱 핸드 워시</a></li>
+                            </ul>
+                            <div class="sub_menu_img">
+                                <a href="#"><img src="./images/sub/sub_3.png"></a>
+                                <a href="#">베스트 둘러보기</a>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <a href="#">스킨케어</a>
+                        <div class="sub_menu">
+                            <ul class="sub_menu_txt">
+                                <li><a href="#">카테고리</a></li>
+                                <li><a href="#">페이셜 클렌저 & 각질 제거</a></li>
+                                <li><a href="#">트리트먼트 & 마스크</a></li>
+                                <li><a href="#">토너</a></li>
+                                <li><a href="#">하이드레이터 & 모이스처라이저</a></li>
+                                <li><a href="#">립 & 아이</a></li>
+                                <li><a href="#">스킨 케어 키드</a></li>
+                                <li><a href="#">스킨 케어 전체 보기</a></li>
+                            </ul>
+                            <ul class="sub_menu_txt">
+                                <li><a href="#">피부타입</a></li>
+                                <li><a href="#">중성 피부</a></li>
+                                <li><a href="#">건성 피부</a></li>
+                                <li><a href="#">지성 피부</a></li>
+                                <li><a href="#">복합성 피부</a></li>
+                                <li><a href="#">민감성</a></li>
+                                <li><a href="#">노화 피부</a></li>
+                                <li><a href="#">트러블 피부</a></li>
+                            </ul>
+                            <div class="sub_menu_img">
+                                <a href="#"><img src="./images/sub/sub_4.png"></a>
+                                <a href="#">스킨케어 둘러보기</a>
+                            </div>
+                            <div class="sub_menu_img">
+                                <a href="#"><img src="./images/sub/sub_5.png"></a>
+                                <a href="#">내피부 이해하기</a>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <a href="#">핸드&바디</a>
+                        <div class="sub_menu">
+                            <ul class="sub_menu_txt">
+                                <li><a href="#">카테고리</a></li>
+                                <li><a href="#">핸드 워시 & 밤</a></li>
+                                <li><a href="#">바 솝</a></li>
+                                <li><a href="#">바디 클렌저 & 스크럽</a></li>
+                                <li><a href="#">바디 밤 & 오일</a></li>
+                                <li><a href="#">데오도란트</a></li>
+                                <li><a href="#">핸드 & 바디 케어 키드</a></li>
+                                <li><a href="#">핸드 & 바디 전체 보기</a></li>
+                            </ul>
+                            <ul class="sub_menu_txt">
+                                <li><a href="#">사랑받는 제품</a></li>
+                                <li><a href="#">레저렉션 아로마틱 핸드 워시</a></li>
+                                <li><a href="#">엘레오스 아로마틱 핸드 밤</a></li>
+                            </ul>
+                            <div class="sub_menu_img">
+                                <a href="#"><img src="./images/sub/sub_6.png"></a>
+                                <a href="#">스킨케어 둘러보기</a>
+                            </div>
+                            <div class="sub_menu_img">
+                                <a href="#"><img src="./images/sub/sub_7.png"></a>
+                                <a href="#">내피부 이해하기</a>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <a href="#">홈</a>
+                        <div class="sub_menu">
+                            <ul class="sub_menu_txt">
+                                <li><a href="#">카테고리</a></li>
+                                <li><a href="#">룸 스프레이</a></li>
+                                <li><a href="#">인센스</a></li>
+                                <li><a href="#">캔들</a></li>
+                                <li><a href="#">오일 버너 블렌드</a></li>
+                                <li><a href="#">디자인 오브제</a></li>
+                                <li><a href="#">탈취제 & 반려동물</a></li>
+                                <li><a href="#">홈 전체 보기</a></li>
+                            </ul>
+                            <ul class="sub_menu_txt">
+                                <li><a href="#">사랑받는 제품</a></li>
+                                <li><a href="#">올루스 아로마틱 룸 스프레이</a></li>
+                                <li><a href="#">포스트-푸 드롭스</a></li>
+                                <li><a href="#">프톨레미 아로마틱 캔들</a></li>
+                            </ul>
+                            <div class="sub_menu_img">
+                                <a href="#"><img src="./images/sub/sub_8.png"></a>
+                                <a href="#">홈 둘러보기</a>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <a href="#">헤어</a>
+                        <div class="sub_menu">
+                            <ul class="sub_menu_txt">
+                                <li><a href="#">카테고리</a></li>
+                                <li><a href="#">샴푸 &  컨디셔너</a></li>
+                                <li><a href="#">헤어 트리트먼트</a></li>
+                                <li><a href="#">그루밍</a></li>
+                                <li><a href="#">헤어 전체 보기</a></li>
+                            </ul>
+                            <ul class="sub_menu_txt">
+                                <li><a href="#">조화로운 셀렉션</a></li>
+                                <li><a href="#">샴푸</a></li>
+                                <li><a href="#">컨디셔너</a></li>
+                                <li><a href="#">테임 헤어 세럼</a></li>
+                            </ul>
+                            <div class="sub_menu_img">
+                                <a href="#"><img src="./images/sub/sub_9.png"></a>
+                                <a href="#">헤어 둘러보기</a>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <a href="#">향수</a>
+                        <div class="sub_menu">
+                            <ul class="sub_menu_txt">
+                                <li><a href="#">카테고리</a></li>
+                                <li><a href="#">플로럴</a></li>
+                                <li><a href="#">프레쉬</a></li>
+                                <li><a href="#">우디</a></li>
+                                <li><a href="#">오퓰런트</a></li>
+                                <li><a href="#">향수 전체 보기</a></li>
+                            </ul>
+                            <ul class="sub_menu_txt">
+                                <li><a href="#">신제품</a></li>
+                                <li><a href="#">어보브 어스, 스테오라 오 드 퍼퓸</a></li>
+                                <li><a href="#">오르너 오 드 퍼퓸</a></li>
+                                <li><a href="#">비레레 오 드 퍼퓸</a></li>
+                            </ul>
+                            <div class="sub_menu_img">
+                                <a href="#"><img src="./images/sub/sub_10.png"></a>
+                                <a href="#">향수 둘러보기</a>
+                            </div>
+                            <div class="sub_menu_img">
+                                <a href="#"><img src="./images/sub/sub_11.png"></a>
+                                <a href="#">프래그런스 파인더</a>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <a href="#">키트&트래블</a>
+                        <div class="sub_menu">
+                            <ul class="sub_menu_txt">
+                                <li><a href="#">카테고리</a></li>
+                                <li><a href="#">기내 필수품</a></li>
+                                <li><a href="#">출퇴근 필수품</a></li>
+                                <li><a href="#">트래블 키트</a></li>
+                                <li><a href="#">트래블 전체 보기</a></li>
+                            </ul>
+                            <ul class="sub_menu_txt">
+                                <li><a href="#">신제품</a></li>
+                                <li><a href="#">헬핑 핸즈 트리오</a></li>
+                                <li><a href="#">배쓰룸 어번던스</a></li>
+                                <li><a href="#">파티 인 더 그린하우스</a></li>
+                            </ul>
+                            <div class="sub_menu_img">
+                                <a href="#"><img src="./images/sub/sub_12.png"></a>
+                                <a href="#">트래블 둘러보기</a>
+                            </div>
+                        </div>
+                    </li>
                 </ul>
             </nav>
             <div class="right_lnb">
@@ -79,7 +253,7 @@
                     <!--필수-->
                     <div class="swiper-wrapper">
                         <div class="swiper-slide slide1">
-                            <a href="#"><img src="./images/Frame 2.png"></a>
+                            <a href="#"><img src="./images/thum/main_bnr.png"></a>
                             <div class="main_contents">
                                 <div class="main_txt">
                                     <h1>Above Us Steorra</h1>
@@ -91,11 +265,12 @@
                             </div>
                         </div>
                         <div class="swiper-slide slide1">
-                            <a href="#"><img src="./images/Frame 2.png"></a>
+                            <a href="#"><img src="./images/thum/main_bnr_2.png"></a>
                             <div class="main_contents">
-                                <div class="main_txt">
-                                    <h1>두번째</h1>
-                                    <h2>Eau de Parfum</h2>
+                                <div class="main_txt2">
+                                    <h3 class="bnr_2">모든 공간을 위한 기프트</h3>
+                                    <h4 class="bnr_txt">풍부한 감각적 일상의 문을 여는 올해 기프트 키트는 ‘집’을 테마로,<br>
+                                        사려 깊은 디자인에 대한 깊은 존중을 담아 선보입니다</h4>
                                 </div>
                                 <div class="top_button">
                                     <button type="button" class="main_button">더보기</button>
@@ -104,7 +279,7 @@
                         </div>
                     </div>
                     <!--필요 시 사용(선택)-->
-                    <div class="swiper-scrollbar"></div>
+                    <!-- <div class="swiper-scrollbar"></div> -->
             </div>
             </div>
             <div class="category">
