--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <!--플러그인 필수 JS cdn 연결-->
     <script src="https://unpkg.com/swiper/swiper-bundle.js"></script>
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Sorts+Mill+Goudy&display=swap" rel="stylesheet">
 </head>
 <body>
     <div id="wrap">
@@ -851,6 +854,8 @@
                 el:'#Personal_item .swiper-scrollbar',
             },
         })
+
+        
     </script>
 </body>
 </html>
